--- a/todos/templates/todos/todo_list.html
+++ b/todos/templates/todos/todo_list.html
@@ -1,62 +1,45 @@
-<!DOCTYPE html>
-<html lang="pt-br">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    
-    <title>VM - Lista de Tarefas</title>
-    
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-  </head>
+{% extends 'base.html' %}
 
-  <body>
+{%block page_title%}
+    Lista de Tarefas
+{%endblock page_title%}
 
-    <nav class="navbar bg-dark mb-4" data-bs-theme="dark">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#"> V. Martinez</a>
-        </div>
-    </nav>
+{% block content %}
+    <h1>Lista de Tarefas</h1>
 
-    <main class="container">
-        <h1>Lista de Tarefas</h1>
-
-        {% if todo_list %}
-            <table class="table">
-                <thead>
+    {% if todo_list %}
+        <table class="table">
+            <thead>
+                <tr>
+                    <th scope="col">#</th>
+                    <th scope="col">Title</th>
+                    <th scope="col">Created at</th>
+                    <th scope="col">Deadline</th>
+                    <th scope="col">Finished at</th>
+                    <th scope="col">Actions</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for todo in todo_list  %}
                     <tr>
-                        <th scope="col">#</th>
-                        <th scope="col">Title</th>
-                        <th scope="col">Created at</th>
-                        <th scope="col">Deadline</th>
-                        <th scope="col">Finished at</th>
-                        <th scope="col">Actions</th>
+                        <th scope="row"> {{ todo.pk }}         </th>
+                        <td> {{ todo.title }}                  </td>
+                        <td> {{ todo.created_at }}             </td>
+                        <td> {{ todo.deadline }}               </td>
+                        <td> {{ todo.finished_at|default:"-" }}</td>
+                        <td>
+                            <a href="#" class="btn btn-primary btn-sm">Concluir</a>
+                            <a href="#" class="btn btn-danger btn-sm"> Excluir</a>
+                        </td>
                     </tr>
-                </thead>
-                <tbody>
-                    {% for todo in todo_list  %}
-                        <tr>
-                            <th scope="row"> {{ todo.pk }}         </th>
-                            <td> {{ todo.title }}                  </td>
-                            <td> {{ todo.created_at }}             </td>
-                            <td> {{ todo.deadline }}               </td>
-                            <td> {{ todo.finished_at|default:"-" }}</td>
-                            <td>
-                                <a href="#" class="btn btn-primary btn-sm">Concluir</a>
-                                <a href="#" class="btn btn-danger btn-sm"> Excluir</a>
-                            </td>
-                        </tr>
-                    {% endfor %}
-                </tbody>
-            </table>
-        {% else%}
-            <p>No Tasks!</p>
-        {% endif %}
+                {% endfor %}
+            </tbody>
+        </table>
+    {% else%}
+        <p>No Tasks!</p>
+    {% endif %}
 
-        <a href="{% url 'todo_create' %}" class="btn btn-primary">Nova tarefa</a>
+    <a href="{% url 'todo_create' %}" class="btn btn-primary">Nova tarefa</a>
 
-        
-    </main>
+{% endblock content %}
     
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
-  </body>
-</html>
