--- a/todos/templates/todos/todo_form.html
+++ b/todos/templates/todos/todo_form.html
@@ -2,11 +2,26 @@
 {% load crispy_forms_tags %}
 
 {% block page_title %}
-    Nova Tarefa
+
+	{% if todo.pk %}
+		Editar a Tarefa
+	{% else %}
+		Nova Tarefa
+	{% endif %}
+
 {% endblock page_title %}
 
+
+
+
 {% block content %}
-    <h1>Nova Tarefa</h1>
+	{% if todo.pk %}
+		<h1>Editar a Tarefa</h1>
+	{% else %}
+		<h1>Nova Tarefa</h1>
+	{% endif %}
+	
+    
                 
     <form method="POST">
         {% csrf_token %}
